Polished UI, added tower selection feedback, auto-wave transitions, and game balancing

--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
                     </button>
                 </div>
 
+                <div class="tower-info-panel" id="towerInfoPanel">
+                    <div class="tower-info-header">
+                        <span class="tower-info-title" id="infoTowerName">궁수</span>
+                        <span class="tower-info-level" id="infoTowerLevel">Lv.1</span>
+                    </div>
+                    <div class="tower-info-stats" id="infoTowerStats">
+                        <!-- Stats will be injected here -->
+                    </div>
+                </div>
+
                 <div class="selected-tower-info" id="selectedTowerInfo">
                     <p>타워를 선택하고 맵에 배치하세요</p>
                 </div>
